force-app/main/default/objects/Factura__c/fields/Detalle_de_factura__c.field-meta.xml
<CustomField>
    <fullName>Detalle_de_factura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detalle de factura</label>
    <referenceTo>Detalle_de_factura__c</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>