force-app/main/default/objects/Factura__c/fields/SubTotal__c.field-meta.xml
<CustomField>
    <fullName>SubTotal__c</fullName>
    <label>SubTotal</label>
    <summarizedField>Detalle_de_factura__c.Precio__c</summarizedField>
    <summaryForeignKey>Detalle_de_factura__c.Factura__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>